src/test/deca/context/invalid/operations/arithmetic/invalid_arithmetic_op_mult_bool.deca
// Description:
//    test invalid operation MULT between int and bool
//    Test rule 3.33
//
// [Begin Result]
//invalid_arithmetic_op_mult_bool.deca:13:12: Unsupported operation '*' between types int and boolean. Operation '*' supported only between integer(s) and(or) float(s). (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print(5 * true);
}